# ogstm

./: .gitignore  CMakeLists.txt  DataAssimilation.cmake  GeneralCmake.cmake  GeneralCmake.cmake.backup  README.md
.github/: CODEOWNERS
BIO/: BIO_mem.F  FN_dia.F  FN_mem.F  OPT_mem.F  SED_mem.F  modulo.passivetrc.h  p3zbio.F  p3zrem.F  trcbio.F  trcbio.bfm.h  trcbio.generic.h  trcbio.npzd.h  trcbio.npzdb.h  trccof.F  trcdtr.F  trcdtr.generic.h  trcdtr.npzd.h  trcexp.F  trcini.F  trcini.bfm.h  trclec.F  trclsm.F  trclsm.generic.h  trclsm.npzd.h  trclsm.opt.h  trclsm.sed.h  trcopt.F  trcrad.F  trcsbc.F  trcsed.F  trcsms.F
General/: TimeManager.F  Timers.F  allcray.F  calendar.F  checkValues.F  ctlopn.F  dialec.F  domstp.F  mod.param.off.h  mod_param.F  modulo.F  opa.F  parameter.h  parameter.passivetrc.h  parcst.F  parctl.F  parini.F  parlec.F  stafun.F  stafun.h  stafun.passivetrc.h  step.F  stringop.F  trcctl.F  trcstp.F
IO/: BC_mem.F  DIA_mem.F  DR_mem.F  DYN_mem.F  IOOGSnc.c  IO_mem.F  IOnc.F  bc_atm.F  bc_gib.F  bc_tin.F  diadump.F  domrea.F  fluxdump.F  forcing_kext.F  forcing_phys.F  physdump.F  trcdia.F  trcdit.F  trcrst.F  trcwri.F  vgmrea.F
MPI/: Fmpplib.F  inimpp.F  inimpp2.F  mod_param_mpp.F  modulo_mpp.F  parameter.mpp.h
PHYS/: ADV_mem.F  HDF_mem.F  ZDF_mem.F  bn2.F  div.F  eos.F  hdfslp.F  inihdf.F  inihdf.tra.coef2d.h  inihdf.tra.coef3d.h  lbc.F  lbc2.F  nonosc.F  prihin.F  prihre.F  prizre.F  smolar.F  snutel.F  trcadv.F  trcadv.arakawa.h  trcadv.muscl.h  trcadv.ppm.h  trcadv.smolar.h  trcadv.tvd.h  trcadv.upstream.h  trcave.F  trcbbl.F  trcbbl.offline.h  trcbbl.online.h  trcdmp.F  trchdf.F  trchdf.bilapgeopot.h  trchdf.bilaplacian.h  trchdf.isopycnal.h  trchdf.laplacian.h  trcnxt.F  trcsbc.F  trczdf.F  wzv.F
application/: ogstm_main_caller.f90
bfmv5/: BFMtab.ben.xml  BFMtab.ben.xml.FULL  BFMtab.xml  namelist.ben  namelist.passivetrc  ogstm_namelist.ben_gen.py  ogstm_namelist_gen.py
build_old/: .config_OGSTM.sh.swp
cmake/: Find3DVAR.cmake  FindBFM.cmake  FindBIOPTIMOD_3STREAM.cmake  FindFABM.cmake  FindNetCDF.cmake  FindOASIM_ATM.cmake  FindPETSc.cmake  FindPnetCDF.cmake
compilers/: P6.AIX.xl.dbg.inc  P6.AIX.xl.inc  compiler.inc  ppc64.LINUX.xl.dbg.inc  ppc64.LINUX.xl.dbg.inc.template  ppc64.LINUX.xl.inc  ppc64.LINUX.xl.inc.template  ppc64le.LINUX.gfortran.dbg.inc  ppc64le.LINUX.gfortran.inc  ppc64le.LINUX.nvfortran.inc  ppc64le.LINUX.pgf90.inc  ppc64le.LINUX.xl.dbg.inc  ppc64le.LINUX.xl.inc  x86_64.LINUX.gfortran.dbg.inc  x86_64.LINUX.gfortran.dbg.inc.template  x86_64.LINUX.gfortran.inc  x86_64.LINUX.gfortran.inc.template  x86_64.LINUX.intel.dbg.inc  x86_64.LINUX.intel.dbg.inc.template  x86_64.LINUX.intel.dbg.inc_old  x86_64.LINUX.intel.inc  x86_64.LINUX.intel.inc.template  x86_64.LINUX.nvfortran.inc
namelists/: namelist  namelist.diagnostics  namelist.init  namelist.passivetrc
preproc/: namelist_optics_gen.py
(+806 files in other folders)
